--- a/HTML-TEORIA/AC02/index.html
+++ b/HTML-TEORIA/AC02/index.html
@@ -7,6 +7,44 @@
     <title>Iphone</title>
 </head>
 <body>
-    
+    <table>
+        <caption>My First Table</caption>
+
+            <thead>
+                <tr>
+                    <th>Phone</th>
+                    <th><img src="iphone.jpg" alt="iphone" width="300" /></th>
+                    <th>Head 3</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>Cel 1-1</td>
+                <td>Cel 1-2</td>
+                <td>Cel 1-3</td>
+
+            </tr>
+
+            <tr>
+                <td>Cel 2-1</td>
+                <td>Cel 2-2</td>
+                <td>Cel 2-3</td>
+            </tr>
+
+            <tr>
+                <td>Cel 3-1</td>
+                <td>Cel 3-2</td>
+                <td>Cel 3-3</td>
+            </tr>
+        </tbody>
+
+        <tfoot>
+            <tr>
+                <td colspan="3">Total 1</td>
+            </tr>
+        </tfoot>
+
+    </table>
 </body>
 </html>
