--- a/HTML-TEORIA/AC02/index.html
+++ b/HTML-TEORIA/AC02/index.html
@@ -1,50 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iphone</title>
 </head>
+<h1 class="h1">Phone Details</h1>
 <body>
     <table>
-        <caption>My First Table</caption>
+        <thead>
+            <tr>
+                <th class="font">Phone</th>
 
-            <thead>
-                <tr>
-                    <th>Phone</th>
-                    <th><img src="iphone.jpg" alt="iphone" width="300" /></th>
-                    <th>Head 3</th>
+                <th colspan="3"><img src="iphone15.jpg" alt="iphone 15" width="120" /></th>
+                <th colspan="2"><img src="iphone14.jpg" alt="iphone 14" width="120" /></th>
+                <th colspan="2"><img src="iphone16.jpg" alt="iphone 16" width="120" /></th>
+                
             </tr>
         </thead>
 
         <tbody>
             <tr>
-                <td>Cel 1-1</td>
-                <td>Cel 1-2</td>
-                <td>Cel 1-3</td>
+                <td class="font">Capacity</td>
+                <td>2GB</td>
+                <td>4GB</td>
+                <td>6GB</td>
+                <td>4GB</td>
+                <td>8GB</td>
+                <td>2GB</td>
+                <td>4GB</td>
+
 
             </tr>
 
             <tr>
-                <td>Cel 2-1</td>
-                <td>Cel 2-2</td>
-                <td>Cel 2-3</td>
+                <td class="font">Colors</td>
+                <td>
+                    <li>Black</li>
+                    <li>White</li>
+                </td>
+                <td>
+                    <li>Black</li>
+                    <li>Line</li>
+                    <li>Violet</li>
+                    <li>White</li>
+                </td>
+                <td>
+                    <li>Black</li>
+                    <li>White</li>
+                </td>
+                <td colspan="2">
+                    <li>Black</li>
+                    <li>White</li>
+                </td>
+                <td colspan="2">
+                    <li>Cloud Navy</li>
+                    <li>Cloud Red</li>
+                    <li>Graphite</li>
+                </td>
             </tr>
 
             <tr>
-                <td>Cel 3-1</td>
-                <td>Cel 3-2</td>
-                <td>Cel 3-3</td>
+                <td class="font">Screen</td>
+                <td colspan="3">6.4 inches</td>
+                <td colspan="2">7 inches</td>
+                <td>6 inches</td>
+                <td>6.7 inches</td>
+            </tr>
+            <tr>
+                <td class="font">Front Camera</td>
+                <td colspan="2">32 M</td>
+                <td>38 M</td>
+                <td colspan="2">24 M</td>
+                <td>24 M</td>
+                <td>28 M</td>
+            </tr>
+            <tr>
+                <td class="font">Ultra Wide Camera</td>
+                <td>12 M</td>
+                <td>14 M</td>
+                <td>18 M</td>
+                <td colspan="2">12 M</td>
+                <td>12 M</td>
+                <td>16 M</td>
+            </tr>
+            <tr>
+                <td class="font">Main Camera</td>
+                <td colspan="2">50 M</td>
+                <td>55 M</td>
+                <td colspan="2">32 M</td>
+                <td>34 M</td>
+                <td>38 M</td>
+            </tr>
+            <tr>
+                <td class="font">Macro Camera</td>
+                <td colspan="3">5 M</td>
+                <td colspan="2">4 M</td>
+                <td colspan="2">4 M</td>
             </tr>
         </tbody>
-
-        <tfoot>
-            <tr>
-                <td colspan="3">Total 1</td>
-            </tr>
-        </tfoot>
-
     </table>
 </body>
+
 </html>
