--- a/HTML-TEORIA/Proyecto Gym/index.html
+++ b/HTML-TEORIA/Proyecto Gym/index.html
@@ -3,25 +3,190 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <nav> <!--flex-->
-        <div> 
-            <a href="" ></a>
-            <img class="logo" src="logo.png" alt="Logo">
+    <nav>
+        <div>
+            <a href=""></a>
+            <img class="logo" src="logo.png" alt="logo" />
         </div>
         <div class="nav-flex">
             <a href="">BLOG</a>
             <a href="">VIDEOS</a>
             <a href=""></a>
-            <img class="client-hover" src="client.png" alt="client">
+            <img class="foto-hover" src="client.png" alt="login" />
+
+
         </div>
     </nav>
-    <img class="main-top" src="main6.jpg" alt="main">
-</body>
 
+    <header>
+        <div class="image-header">
+            <p><mark>Active 360: Aconsegueix la teva millor forma física</mark></p>
+        </div>
+    </header>
+    <div class="container">
+        <div class="column-izquierda">
+
+            <h1>Per què Active 360?</h1>
+
+            <div class="text-active360">
+                <p> En un món cada vegada més ràpid i exigent, mantenir-se <b>actiu</b> i en <b>forma</b> és essencial
+                    per viure
+                    amb energia i plenitud. L'activitat física no només reforça el cos, sinó que també impulsa la ment i
+                    revitalitza l’esperit. </p>
+                <p>
+                    Atendre les nostres necessitats físiques amb exercici regular i una vida activa no hauria de ser una
+                    opció, sinó una prioritat per enfortir el nostre equilibri físic i mental. Quan ens movem, no només
+                    millorem la nostra resistència i força, sinó que també desenvolupem la confiança per afrontar els
+                    desafiaments diaris amb determinació. </p>
+                <p>
+                    El benestar físic és, així, un camí dinàmic i ple de reptes que ens porta a descobrir el millor de
+                    nosaltres mateixos. A <b>Active360</b>, t'acompanyem en cada pas d'aquest viatge cap a un estil de
+                    vida
+                    actiu i saludable. </p>
+            </div>
+        </div>
+        <div class="column-derecha">
+
+            <div class="formulari">
+
+
+                <p></p>
+                Per estar al dia, subscriu-te a la nostra newsletter
+
+                <p></p>
+
+                <form>
+                    <label for="name">Nom</label>
+                    <br />
+                    <input type="name" id="name" name="name" placeholder="Escriu el teu nom">
+                    <p></p>
+                    <label for="email">Correu electrònic</label>
+                    <br />
+                    <input type="email" id="email" name="id" placeholder="Escriu el teu e-mail">
+                    <br />
+
+
+                    <div class="info-protec">
+                        <p></p>
+                        INFORMACIÓ SOBRE PROTECCIÓ DE DADES DE Active360. Finalitats: recollida de dades
+                        per a l'enviament del butlletí electrònic. Legitimació: consentiment de l'interessat.
+                        Destinataris: no
+                        hi són previstes cessions de dades a tercers, excepte obligació legal. Drets: podeu retirar el
+                        vostre
+                        consentiment en qualsevol moment, així com accedir, rectificar, suprimir les vostres dades i
+                        altres
+                        drets dirigint-vos a info@active360.com. Informació Addicional: podeu ampliar la informació a
+                        l'enllaç d'Avís legal i Política de privadesa. <p></p>
+                    </div>
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" name="remember"> He llegit i accepto la política
+                        de
+                        privadesa
+                    </label>
+                    <p></p>
+                    <button type="submit" value="Submit">SUBSCRIU-ME A LA NEWSLETTER</button>
+                </form>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="boxes">
+        <div class="box">
+            <img class="box-image" src="progression.png" alt="progession" />
+            <h1>Progressió</h1>
+            Una progressió adequada per cada tipus de persona implica tenir en compte les seves necessitats,
+            objectius, limitacions i capacitats. Això permet un desenvolupament personalitzat, equilibrat i
+            sostenible, potenciant l'autonomia i l'èxit.
+
+        </div>
+        <div class="box">
+            <img class="box-image" src="workout.png" alt="workout" />
+            <h1>Workout</h1>
+            Una progressió adequada per cada tipus de persona implica tenir en compte les seves necessitats,
+            objectius, limitacions i capacitats. Això permet un desenvolupament personalitzat, equilibrat i
+            sostenible, potenciant l'autonomia i l'èxit.
+
+        </div>
+        <div class="box">
+            <img class="box-image" src="nutrition.png" alt="nutricio" />
+            <h1>Nutrició</h1>
+            Una progressió adequada per cada tipus de persona implica tenir en compte les seves necessitats,
+            objectius, limitacions i capacitats. Això permet un desenvolupament personalitzat, equilibrat i
+            sostenible, potenciant l'autonomia i l'èxit.
+
+        </div>
+    </div>
+    <div class="table-boxes">
+        <img class="table-image" src="home-bloc5.jpg" alt="homebloc" />
+        <div class="table-box">
+            <h2>Activitats dirigides preparades per a tots els gustos i necessitats</h2>
+            La resistència física és molt més que la capacitat de mantenir un esforç prolongat: és una eina fonamental
+            per aconseguir un equilibri entre salut física i mental. Quan treballem la nostra resistència, no només
+            millorem el rendiment esportiu, sinó que també potenciem la capacitat del nostre cos per gestionar l’estrès,
+            augmentem la vitalitat i afavorim un estat d’ànim més positiu. Aconseguir una bona resistència física
+            requereix constància i dedicació. Activitats com el càrdio, l’entrenament funcional o les rutines de força
+            milloren la capacitat cardiovascular i muscular, reforçant el cor i els pulmons mentre incrementen la
+            resistència mental. Cada sessió és una oportunitat per superar els teus límits i sentir-te més fort i en
+            harmonia amb el teu cos.
+            <button type="submit" value="Submit">Més informació</button>
+        </div>
+        <img class="table-image" src="home-bloc2.jpg" alt="homebloc" />
+        <div class="table-box">
+            <h2>Benestar mental</h2>
+            La salut mental és fonamental per al teu benestar general i influeix directament en la teva qualitat de
+            vida. Descobreix tècniques de relaxació eficaces per reduir l'estrès i recuperar l'equilibri emocional, com
+            la meditació, el mindfulness i la respiració profunda. Aprèn a gestionar les emocions, a desenvolupar una
+            mentalitat positiva i a afrontar els desafiaments diaris amb calma i serenitat. A través de pràctiques com
+            el mindfulness, pots millorar la teva concentració, reduir l'ansietat i augmentar el teu sentit de pau
+            interior. També abordarem estratègies per millorar el teu somni, gestionar la fatiga mental i fomentar una
+            actitud resilient davant les adversitats. El teu benestar mental és un pilar fonamental per viure de manera
+            equilibrada i saludable, i dedicar temps al teu autocura pot transformar la teva vida en tots els àmbits.
+            <button type="submit" value="Submit">Més informació</button>
+        </div>
+    </div>
+    <img class="table-image" src="home-bloc0.jpg" alt="homebloc" />
+    <div class="table-box">
+        <h2>Exercici i activitat fisica</h2>
+        L'activitat física regular és fonamental per mantenir un cos i una ment en òptimes condicions. Explora
+        diferents rutines d'exercici adaptades a les teves necessitats, ja sigui per millorar la força, la
+        flexibilitat o l'endurance. A més, t'oferim consells pràctics per integrar l'exercici a la teva vida diària,
+        així com motivació per mantenir-te actiu. L'exercici no només millora la salut cardiovascular, sinó que
+        també afavoreix la salut mental, reduint l'estrès, millorant l'estat d'ànim i augmentant els nivells
+        d'energia. Incorporar activitats físiques regulars pot ajudar-te a prevenir malalties cròniques, millorar la
+        qualitat del son i augmentar la teva confiança en tu mateix. Amb l'exercici, no només enforteixes el teu
+        cos, sinó també la teva ment, creant un benestar global que et permet afrontar els reptes de la vida amb més
+        vitalitat i positivisme.
+        <button type="submit" value="Submit">Més informació</button>
+    </div>
+    <img class="table-image" src="crossfit-workout.jpg" alt="homebloc" />
+    <div class="table-box">
+        <h2>CrossFit, un estil de vida </h2>
+        Gaudeix de les millors sessions de Cross training. Les classes es desenvolupen sobre la base d'un circuit
+        d'entrenament d'exercicis a través d'estacions i amb suport music. El Cross Training és una modalitat
+        d'entrenament que combina exercicis cardiovasculars amb rutines de força muscular, oferint una varietat
+        d'activitats. L'objectiu principal és desenvolupar la condició física de manera integral, millorant diverses
+        capacitats del cos. Tot i això, segons com es dissenyi cada sessió, es pot posar més èmfasi en potenciar una
+        habilitat específica o una altra.
+        <button type="submit" value="Submit">Més informació</button>
+    </div>
+    </div>
+    <footer class="low-index">
+        <div>
+            <a href=""></a>
+            <img class="logo" src="logo.png" alt="logo" />
+        </div>
+        <div>  
+            <img class="logo-low" src="twitter.svg" alt="login" />
+            <img class="logo-low" src="instagram.svg" alt="login" />
+            <img class="logo-low" src="youtube.svg" alt="login" />
+        </div>
+    </footer>
+</body>
 </html>
